# side-project-prototype

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  backend_manifest.json
backend/benches/: benchmark.rs
backend/src/: crypto.rs  event.rs  gateway.rs  http.rs  lib.rs  main.rs  message.rs  message_processing.rs  nat_traversal.rs  node.rs  peer.rs  test_utils.rs  tests.rs  utils.rs
backend/src/gateway/: discover.rs  search.rs  stage.rs  stream.rs
backend/src/message_processing/: discover.rs  distribute.rs  search.rs  stage.rs  stream.rs  stream2.rs
backend/tests/: simulation.rs
client-extension/: background.js  content_script.js  manifest.json  my_page.html  my_page.js
crypto-test/: Cargo.toml
crypto-test/src/: main.rs
src/: gateway.rs  lib.rs  main.rs  message.rs  nat_traversal.rs  node.rs  send.rs
test/: starter.bat  test.py
