[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
priority-queue = "1.3.2"
stun = "0.4.4"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.26"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
bincode = "1.3.3"
zstd = "0.12.4"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = ["small_rng"] }