[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "~1", features = ["full"] }
priority-queue = "~1"
stun = "~0"
uuid = { version = "~1", features = ["v4"] }
chrono = "~0"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
bincode = "~1"
rand = { version = "~0", features = ["small_rng"] }
hyper = { version = "~0", features = ["client", "server", "tcp", "http1"] }
ring = "~0"
tracing = "~0"
tracing-subscriber = "~0"
console-subscriber = "~0"